# harmony

./: .gitignore
backend/: .env.example  Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/auth/: login.rs  mod.rs  register.rs
backend/src/models/: mod.rs  user.rs
backend/src/users/: id.rs  mod.rs
