[package]
name = "harmony"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
chrono = "0.4.24"
derive_more = "0.99.17"
dotenvy_macro = "0.15.7"
jsonwebtoken = "8.3.0"
once_cell = "1.17.1"
pwhash = "1.0.0"
regex = "1.8.1"
rustflake = "0.1.1"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
tokio-postgres = "0.7.8"
